fix container css

--- a/src/index.html
+++ b/src/index.html
@@ -263,10 +263,11 @@
             ></div>
         </div>
         <div class="skinHeader focuscontainer-x"></div>
-        <div class="mainAnimatedPages skinBody">
-            <div class="splashLogo"></div>
-        </div>
-        <div id="reactRoot" class="skinBody"></div>
+        <div
+            id="reactRoot"
+            class="skinBody"
+            style="height: 100%; position: relative"
+        ></div>
         <div class="mainDrawerHandle"></div>
     </body>
 </html>
